--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon --exec babel-node server/index.js"
+    "start": "node ./server/bin/www",
+    "dev": "nodemon --exec babel-node server/bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
